# Copyright 2023 Arm Limited and/or its affiliates
# <open-source-office@arm.com>
# SPDX-License-Identifier: MIT

add_subdirectory(corejson)
add_subdirectory(coremqtt)
add_subdirectory(coremqtt_agent)
add_subdirectory(corepkcs11)
add_subdirectory(ota_for_aws_iot_embedded_sdk)
add_subdirectory(tinycbor)
