[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"
[tool.setuptools_scm]
local_scheme = "no-local-version"
root = "../.."

[tool.towncrier]
ignore = [".gitkeep"]
directory = "../../release_changes"
filename = "CHANGELOG.md"
template = "towncrier/template.rst"

[[tool.towncrier.type]]
directory = "change"
name = "Changes"
showcontent = true

[tool.black]
diff = false
color = true
line-length = 88
